--- a/SPIT HACK/index.html
+++ b/SPIT HACK/index.html
@@ -3,121 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodeKids - Friends & Collaboration</title>
+    <title>Kiddify 🚀</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Replace local socket.io with CDN version -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.4/socket.io.js"></script>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>🚀 CodeKids Friends</h1>
-            <div class="profile-badge">
-                <img src="mario-front.gif" alt="Profile" class="profile-pic">
-                <span class="username">jay</span>
-            </div>
-        </header>
 
-        <nav class="tabs">
-            <button class="tab active" data-tab="friends">👥 Friends</button>
-            <button class="tab" data-tab="challenges">🎮 Challenges</button>
-            <button class="tab" data-tab="messages">💬 Messages</button>
+    <!-- 🌌 Navbar -->
+    <header>
+        <div class="logo-container">
+            <img src="assets/icon_hero.png" alt="Kiddify Logo" class="logo">  <!-- 🔹 Updated logo -->
+            <h1 class="fancy-title">Kiddify</h1>
+        </div>
+
+        <nav>
+            <button class="nav-btn">About Us</button>
+            <button class="nav-btn">Login</button>
         </nav>
+    </header>
 
-        <main>
-            <section id="friends" class="tab-content active">
-                <div class="search-bar">
-                    <input type="text" placeholder="Find new friends by username...">
-                    <button class="add-friend">Add Friend</button>
-                </div>
-                
-                <div class="friends-list">
-                    <div class="friend-card">
-                        <img src="https://images.unsplash.com/photo-1570158268183-d296b2892211?w=80&h=80&fit=crop" alt="Friend" class="friend-pic">
-                        <div class="friend-info">
-                            <h3>NinjaCoder</h3>
-                            <span class="level">Level 12</span>
-                            <span class="status online">Online</span>
-                        </div>
-                        <div class="friend-actions">
-                            <button class="message-btn" data-friend="NinjaCoder" data-pic="https://images.unsplash.com/photo-1570158268183-d296b2892211?w=80&h=80&fit=crop">Message</button>
-                            <button class="challenge-btn">Challenge</button>
-                        </div>
-                    </div>
+    <main>
+        <!-- 🛰️ Waving Astronaut in Middle-Top -->
+        <img src="assets/astro.png" alt="Waving Astronaut" id="astro-image">
 
-                    <div class="friend-card">
-                        <img src="https://images.unsplash.com/photo-1566492031773-4f4e44671857?w=80&h=80&fit=crop" alt="Friend" class="friend-pic">
-                        <div class="friend-info">
-                            <h3>RocketProgrammer</h3>
-                            <span class="level">Level 15</span>
-                            <span class="status offline">Offline</span>
-                        </div>
-                        <div class="friend-actions">
-                            <button class="message-btn" data-friend="RocketProgrammer" data-pic="https://images.unsplash.com/photo-1566492031773-4f4e44671857?w=80&h=80&fit=crop">Message</button>
-                            <button class="challenge-btn">Challenge</button>
-                        </div>
-                    </div>
-                </div>
-            </section>
+        <section class="intro">
+            <h2>Welcome, Young Astronauts! 👨‍🚀👩‍🚀</h2>
+            <p>Join us on a coding adventure beyond the stars. Solve the problem statement, unleash your creativity, and build something amazing! ✨</p>
+        </section>
 
-            <section id="challenges" class="tab-content">
-                <div class="challenges-list">
-                    <div class="challenge-card">
-                        <div class="challenge-header">
-                            <h3>🏰 Build a Magic Castle</h3>
-                            <span class="difficulty beginner">Beginner</span>
-                        </div>
-                        <p>Team up with friends to create an enchanted castle using loops and functions!</p>
-                        <div class="challenge-footer">
-                            <span>👥 2-4 players</span>
-                            <button class="join-btn">Join Challenge</button>
-                        </div>
-                    </div>
-
-                    <div class="challenge-card">
-                        <div class="challenge-header">
-                            <h3>🚀 Space Adventure</h3>
-                            <span class="difficulty intermediate">Intermediate</span>
-                        </div>
-                        <p>Work together to program a spaceship's navigation system!</p>
-                        <div class="challenge-footer">
-                            <span>👥 2-3 players</span>
-                            <button class="join-btn">Join Challenge</button>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section id="messages" class="tab-content">
-                <div class="quick-messages">
-                    <h3>Quick Messages</h3>
-                    <div class="message-buttons">
-                        <button>Great job! 🌟</button>
-                        <button>Need help? 🤝</button>
-                        <button>Let's code together! 💻</button>
-                        <button>Amazing work! 🎉</button>
-                    </div>
-                </div>
-                <div class="messages-list">
-                    <!-- Messages will be added here dynamically -->
-                </div>
-            </section>
-        </main>
-    </div>
-
-    <!-- Chat Window Template -->
-    <div class="chat-window" id="chatWindow">
-        <div class="chat-header">
-            <img src="" alt="Friend" id="chatFriendPic">
-            <span id="chatFriendName"></span>
-            <button class="close-chat">✕</button>
+         <!-- 🌟 Three Feature Boxes -->
+        <div class="feature-container">
+            <div class="feature-box">
+                <img src="assets/story.png" alt="Modules" class="box-img">
+                <p class="box-title">Story Adventure Page</p>
+            </div>
+            <div class="feature-box">
+                <img src="assets/coding.png" alt="Coding Challenge" class="box-img">
+                <p class="box-title">Coding Challenge Page</p>
+            </div>
+            <div class="feature-box">
+                <img src="assets/collab.png" alt="Collaboration Hub" class="box-img">
+                <p class="box-title">Collaboration Hub</p>
+            </div>
         </div>
-        <div class="chat-messages"></div>
-        <div class="chat-input">
-            <input type="text" placeholder="Type a message..." id="messageInput">
-            <button id="sendMessage">Send</button>
+
+        <!-- 🌌 Animated Background (Your GIF) -->
+        <div id="animated-background">
+            <img src="assets/login.gif" alt="Animated Space Background">
         </div>
-    </div>
+    
+        <!-- 🌟 Stars & Meteor -->
+        <div id="stars-container"></div>
+        <div class="meteor"></div>
+    </main>    
 
     <script src="script.js"></script>
 </body>
